[gd_scene load_steps=3 format=3 uid="uid://combat_debug_overlay_001"]

[ext_resource type="Script" path="res://ui/debug/combat_debug_overlay.gd" id="1_combat_debug"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_combat_debug"]
bg_color = Color(0, 0, 0, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.6, 0.8, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 8.0
content_margin_top = 6.0
content_margin_right = 8.0
content_margin_bottom = 6.0

[node name="CombatDebugOverlay" type="CanvasLayer"]
layer = 100
script = ExtResource("1_combat_debug")

[node name="DebugPanel" type="PanelContainer" parent="."]
anchors_preset = 0
offset_left = 8.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 250.0
theme_override_styles/panel = SubResource("StyleBoxFlat_combat_debug")

[node name="MarginContainer" type="MarginContainer" parent="DebugPanel"]
layout_mode = 2

[node name="DebugText" type="Label" parent="DebugPanel/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 7
text = "=== COMBAT DEBUG (F4) ===

Input Latency: 0.0ms
  (0.0 frames @ 60 FPS)

Current State: IDLE
Active Frame: N/A

Hit/Hurtbox Status:
  Hitbox: INACTIVE
  Hurtbox: VULNERABLE

Combo: None

Frame: 0 | FPS: 60"
vertical_alignment = 0
autowrap_mode = 3
